--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YGAMES</title>
+
+    <!-- Add CSS here -->
+    <style>
+      /* Root container */
+      #root {
+        margin: 0;
+        padding: 0;
+        min-height: 100vh;
+        width: 100%;
+        background-color: #f5f5f5; /* Example background */
+        font-family: Arial, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      /* Optional: remove any unwanted text nodes */
+      body {
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+      }
+    </style>
   </head>
-  <body style="margin: 0; padding: 0; box-sizing: border-box;">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
