fixes couple of bugs fixed a bit of responsive ness and added site map

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>YGAMES</title>
+    <meta name="description" content="Achetez des jeux vidéo, consoles et figurines exclusives chez Ygamez, la boutique gamer N°1 en Algérie - Tlemcen.">
+
+    <title>Ygames – Jeux vidéo, consoles & figurines en Algérie</title>
+
   </head>
   <body style="margin: 0; padding: 0; box-sizing: border-box;">
     <div id="root"></div>
